--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@
  .as {
      display: none;
  }
-
+ .none{
+    display: none;
+ }
  button {
      background-color: var(--bg-color1);
      color: var(--bg-color2);
