GIT ARRUMANDO AS LOGO
GIT ARRUMANDO AS LOGO, DEIXANDO MELHOR CADA LOGO

--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@
      .area_content_img img {
          margin-left: 20px;
          width: 45%;
-         object-fit: contain;
+         object-fit: cover;
      }
 
      .area_content_text {
