--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@
          display: grid;
          grid-template-columns: 10% 90%;
          grid-template-rows: 6vh 94vh;
-         align-items: flex-start;
+         align-items: center;
          justify-items: center;
          width: 100%;
          height: 6vh;
@@ -444,7 +444,7 @@
          display: grid;
          grid-template-columns: 10% 90%;
          grid-template-rows: 6vh 94vh;
-         align-items: flex-start;
+         align-items: center;
          justify-items: center;
          width: 100%;
          height: 6vh;
@@ -762,26 +762,14 @@
          display: grid;
          grid-template-columns: 10% 90%;
          grid-template-rows: 6vh 94vh;
-         align-items: flex-start;
+         align-items: center;
          justify-items: center;
          width: 100%;
          height: 6vh;
          overflow: hidden;
          transition: all 1s ease;
      }
-
-     .menu_area {
-         display: grid;
-         grid-template-columns: 10% 90%;
-         grid-template-rows: 6vh 94vh;
-         align-items: flex-start;
-         justify-items: center;
-         width: 100%;
-         height: 6vh;
-         overflow: hidden;
-         transition: all 1s ease;
-     }
-
+    
      .menu_mobile_bar {
          display: flex;
          flex-direction: column;
@@ -1098,7 +1086,7 @@
          display: grid;
          grid-template-columns: 10% 90%;
          grid-template-rows: 6vh 94vh;
-         align-items: flex-start;
+         align-items: center;
          justify-items: center;
          width: 100%;
          height: 6vh;
@@ -1442,7 +1430,7 @@
          display: grid;
          grid-template-columns: 10% 90%;
          grid-template-rows: 6vh 94vh;
-         align-items: flex-start;
+         align-items: center;
          justify-items: center;
          width: 100%;
          height: 6vh;
