--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,316 @@
      margin: 5px;
  }
 
+    header {
+        padding: 10px 0 10px 0;
+        background-color: var(--bg-color1);
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .menu_area {
+        display: grid;
+        grid-template-columns: 10% 90%;
+        grid-template-rows: 6vh 94vh;
+        align-items: center;
+        justify-items: center;
+        width: 100%;
+        height: 6vh;
+        overflow: hidden;
+        transition: all 1s ease;
+    }
+
+    .menu {
+        width: 100%;
+    }
+
+    .menu_mobile_bar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 10px;
+        margin-left: 20px;
+    }
+
+    .bar {
+        background-color: var(--bg-color2);
+        width: 2rem;
+        height: 3px;
+    }
+
+    .menu_mobile {
+        background-color: var(--bg-color1);
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        color: var(--bg-color3);
+        padding: 15px;
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        transition: all 1s ease;
+    }
+
+    .menu_mobile ul li {
+        font-size: 1, 5rem;
+        margin: 20px;
+        list-style: none;
+    }
+
+    .text_menu {
+        width: 100%;
+        text-align: center;
+    }
+
+    .text_menu h1 {
+        color: var(--bg-color2);
+        font-size: 2rem;
+    }
+
+    .area_filtro {
+        margin-top: 10px;
+    }
+
+    .filtro {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--bg-color1);
+        gap: 30px;
+    }
+
+    .modalf,
+    .modalc {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .filtro_area_aberto {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 10px;
+        z-index: 1;
+        width: 90vw;
+        height: 80vh;
+        background-color: var(--bg-color3);
+        color: var(--bg-color2);
+        border-radius: 10px;
+        border: 1px solid var(--bg-color2);
+    }
+
+    .filtro_cidade_text,
+    .filtro_estabelecimento_text {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row: 2fr;
+        padding: 10px;
+    }
+
+    .filtro_estabelecimento,
+    .filtro_cidade {
+        display: flex;
+        padding: 10px;
+    }
+
+    .area {
+        border: 1px solid var(--bg-color2);
+        background-color: rgb(219, 218, 218);
+        margin-top: 20px;
+        height: 70vh;
+        overflow: scroll;
+
+    }
+
+    .area_conteudo {
+        display: grid;
+        grid-template-columns: 100px 1fr;
+        border: 1px solid var(--bg-color2);
+        margin: 10px 0 10px 0;
+        background-color: var(--bg-color3);
+    }
+
+    .area_img {
+        border-right: 1px solid var(--bg-color2);
+        object-fit: contain;
+    }
+
+    .area_img img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .area_text {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        color: var(--bg-color2);
+        margin-left: 10px;
+    }
+    .area_text h1 {
+       margin: 5px 0 5px 0;
+   }
+
+    .modalc {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .area_content_open {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 37vw;
+        height: 85vh;
+        background-color: var(--bg-color3);
+        border: 2px solid var(--bg-color2);
+    }
+
+    .area_content_return {
+        width: 100%;
+        height: 8%;
+        display: grid;
+        grid-template-columns: 100px 1fr;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--bg-color1);
+    }
+
+    .area_content_return img {
+        margin-left: 30px;
+        width: 45px;
+        height: 30px;
+    }
+
+    .area_content_return h1 {
+        color: var(--bg-color2);
+    }
+
+    .area_content_img {
+        background-color: white;
+        width: 100%;
+        text-align: center;
+        border-bottom: 2px solid var(--bg-color2);
+    }
+
+    .area_content_img img {
+   
+        width: 45%;
+        object-fit: cover;
+    }
+
+    .area_content_text {
+        color: var(--bg-color1);
+    }
+
+    .area_content_name {
+        display: grid;
+        grid-template-columns: 70px 1fr;
+        align-items: center;
+        justify-content: center;
+        margin: 10px 0 10px 0;
+    }
+
+    .content_endereço_title,
+    .content_endereço_body,
+    .midia,
+    .phone {
+        margin-bottom: 5px;
+    }
+    .rua{
+       margin-left: 5px;
+    }
+    .area_content_comunication {
+        display: grid;
+        grid-template-columns: 1fr;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5px;
+    }
+
+    .midia {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .links {
+        margin-left: 10px;
+    }
+
+    .phone {
+        display: grid;
+        grid-template-columns: 80px 1fr;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .area_content_descont {
+
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 5px;
+    }
+
+    .content_endereço_body {
+        display: grid;
+        grid-template-columns: 70px 1fr;
+        gap: 5px;
+    }
+
+    .sb {
+        border-bottom: 0;
+        margin-bottom: 0;
+    }
+
+    .sm {
+        margin-top: 0;
+    }
+
+    .button_cadastro {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .fm h1 {
+        font-size: 1.7rem;
+    }
+
+    button {
+        font-size: 0.8rem;
+    }
+
+    .text_stardescontos {
+        margin-top: 20px;
+        color: var(--bg-color1);
+        text-align: justify;
+        line-height: 36px;
+    }
+
+    .area_content_descont ul li{
+       list-style: none;
+       margin: 5px 0 5px 0;
+   }
+
+
  @media(min-width:768px) and (max-width:1023px) {
 
      header {
