--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,8 @@ label {
        display: grid;
        grid-template-columns: 10% 90%;
        grid-template-rows: 6vh 94vh;
-       align-items: flex-start;
-       justify-items: flex-start;
+       align-items: center;
+       justify-items: center;
        width: 100%;
        height: 6vh;
        overflow: hidden;
