--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ label {
        padding: 10px;
        z-index: 1;
        width: 90vw;
-      
+      heigth:90%;
        background-color: var(--bg-color3);
        color: var(--bg-color2);
        border-radius: 10px;
