--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ label {
     display: grid;
     grid-template-columns: repeat(2,1fr);
     overflow-y: scroll;
-
+    height:60%;
    }
    .area_btn1{
         display: flex;
