--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ label {
         display: grid;
         grid-template-columns: 1fr;
         padding: 10px;
-        height: 40%;
+        height: 40vh;
     }
 
 }
